--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,6 @@
 //*@import "./pages/work";*//
 //*@import "./pages/about";*//
 //*@import "./pages/project"; *//
+$colour-primary: #9356dc;
+$colour-secondary: #ff79da;
+$colour-tertiaire: #99e2e0;
