--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,7 @@
 $colour-primary: #9356dc;
 $colour-secondary: #ff79da;
 $colour-tertiaire: #99e2e0;
+$colour-bordure1: #d5d5d5;
+$colour-nuancefonce: #eaeaea;
+$colour-nuanceclair: #f6f6f6;
+$colour-footer: #353535;
