rajout de couleur grise dans variable

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -60,6 +60,6 @@ main {
   background-color: $colour-tertiaire;
 }
 footer {
-  background-color: $colour-tertiaire;
+  background-color: $colour-footer;
   color: white;
 }
