--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,8 +45,16 @@ main {
 }
 
 footer {
+  margin: 0 0 0 0;
+  height: auto;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  padding: 1em 2em;
   background-color: #353535;
   color: white;
+  margin: 0;
+  text-align: left;
 }
 
 /*# sourceMappingURL=style.css.map */
