changement de couleur de font pour  restaurants

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,7 +54,7 @@ main {
   flex-direction: column;
 }
 .restaurants {
-  background-color: $colour-tertiaire;
+  background-color: $colour-nuanceclair;
 }
 footer {
   margin: 0 0 0 0;
