--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,6 +31,9 @@ body {
   background-color: $colour-nuancefonce;
   text-align: center;
 }
+.fa-map-marker-alt {
+  font-size: 0.8em; /*taille icone de recherche*/
+}
 
 .baheader {
   display: flex;
@@ -67,9 +70,15 @@ footer {
   color: white;
   margin: 0;
   text-align: left;
-  line-height: 1px;
+  line-height: 0.8px;
 }
 footer a {
   color: white;
   text-decoration: none;
+}
+.fa-utensils {
+  font-size: 0.8em; /*taille icone foucherte */
+}
+.fa-hands-helping {
+  font-size: 0.8em; /*taille icone partenaire */
 }
