--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,10 @@ body {
   display: flex;
   flex-direction: column;
 }
+.logo {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 
 .miheader {
   display: flex;
@@ -32,7 +36,7 @@ body {
   text-align: center;
 }
 .fa-map-marker-alt {
-  font-size: 0.8em; /*taille icone de recherche*/
+  font-size: 1em; /*taille icone de recherche*/
 }
 
 .baheader {
