--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,6 +56,16 @@ body {
   margin: auto;
   margin-bottom: 20px;
 }
+.btn-commander {
+  background: linear-gradient(180deg, $colour-secondary, $colour-primary);
+
+  color: white;
+  border-radius: 50px;
+  text-align: center;
+  width: 75%;
+  margin: auto;
+  margin-bottom: 20px;
+}
 main {
   display: flex;
   flex-direction: column;
