--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 .miheader {
+  box-shadow: 0px -4px 3px #d5d5d5;
   display: flex;
   flex-direction: column;
   background-color: #eaeaea;
