--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,6 +30,7 @@ body {
 }
 
 .miheader {
+  box-shadow: 0px -4px 3px $colour-bordure1;
   display: flex;
   flex-direction: column;
   background-color: $colour-nuancefonce;
