--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ h6 {
   margin-bottom: 1em;
 }
 
-.miheader {
+.header__milieu {
   box-shadow: 0px -4px 3px #d5d5d5;
   display: flex;
   flex-direction: column;
@@ -38,14 +38,14 @@ h6 {
   /*taille icone de recherche*/
 }
 
-.baheader {
+.header__bas {
   display: flex;
   flex-direction: column;
   background-color: #f6f6f6;
   text-align: center;
 }
 
-.btn-header {
+.header__btn {
   background: linear-gradient(160deg, #ff79da, #9356dc);
   color: white;
   border-radius: 50px;
