--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,7 +37,7 @@ h6 {
   margin-bottom: 1em;
 }
 
-.miheader {
+.header__milieu {
   box-shadow: 0px -4px 3px $colour-bordure1;
   display: flex;
   flex-direction: column;
@@ -48,14 +48,14 @@ h6 {
   font-size: 1em; /*taille icone de recherche*/
 }
 
-.baheader {
+.header__bas {
   display: flex;
   flex-direction: column;
   background-color: $colour-nuanceclair;
   text-align: center;
 }
 
-.btn-header {
+.header__btn {
   background: linear-gradient(160deg, $colour-secondary, $colour-primary);
   color: white;
   border-radius: 50px;
