--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,28 @@
+.header__bas {
+  display: flex;
+  flex-direction: column;
+  background-color: #f6f6f6;
+  text-align: center;
+}
+
+.header__milieu {
+  box-shadow: 0px -4px 3px #d5d5d5;
+  display: flex;
+  flex-direction: column;
+  background-color: #eaeaea;
+  text-align: center;
+}
+
+.header__bas__btn {
+  background: linear-gradient(160deg, #ff79da, #9356dc);
+  color: white;
+  border-radius: 50px;
+  text-align: center;
+  width: 75%;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -25,34 +50,9 @@ h6 {
   margin-bottom: 1em;
 }
 
-.header__milieu {
-  box-shadow: 0px -4px 3px #d5d5d5;
-  display: flex;
-  flex-direction: column;
-  background-color: #eaeaea;
-  text-align: center;
-}
-
 .fa-map-marker-alt {
   font-size: 1em;
   /*taille icone de recherche*/
-}
-
-.header__bas {
-  display: flex;
-  flex-direction: column;
-  background-color: #f6f6f6;
-  text-align: center;
-}
-
-.header__btn {
-  background: linear-gradient(160deg, #ff79da, #9356dc);
-  color: white;
-  border-radius: 50px;
-  text-align: center;
-  width: 75%;
-  margin: auto;
-  margin-bottom: 20px;
 }
 
 main {
