--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -27,3 +27,14 @@
   font-weight: bold;
   font-size: 1.4em;
 }
+.header__bas p {
+  font-size: 1.4em;
+}
+.logo {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.fa-map-marker-alt {
+  font-size: 1em; /*taille icone de recherche*/
+}
