--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,8 +115,11 @@ main {
   width: 85%;
   margin: auto;
   margin: 20px 20px;
+  padding: 1em;
   margin-bottom: 20px;
   box-shadow: 2px 2px 2px #eaeaea;
+  display: flex;
+  flex-direction: row;
 }
 
 .Fonctionnement__btn-color {
