--- a/sass/main.scss
+++ b/sass/main.scss
@@ -55,9 +55,9 @@ main {
 }
 
 .Fonctionnement__btn {
-  border-radius: 50px;
+  border-radius: 25px;
   text-align: center;
-  width: 85%;
+  width: 80%;
   margin: auto;
   margin: 20px 20px;
   padding: 1em;
@@ -73,4 +73,29 @@ main {
 
 .Fonctionnement__btn-color2 {
   background: lighten($colour-primary, 35%);
+}
+.Fonctionnement__btn_chiffre {
+  background-color: darken($colour-primary, 20%);
+  padding: 1em;
+  border-radius: 50%;
+  color: white;
+  z-index: 4;
+}
+.fonctionnement__btn-placement {
+  position: absolute;
+  left: 0em;
+  height: 0em;
+}
+.fas fa-list-ul {
+  border: solid 2px purple;
+}
+Fonctionnement__btn p {
+  border: solid 2px red;
+  display: flex;
+  flex-direction: row;
+  z-index: 3;
+  position: relative;
+}
+Fonctionnement__btn_chiffre {
+  height: auto;
 }
