--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,28 +10,7 @@
 @import "./pages/work";
 @import "./pages/about";
 @import "./pages/project";
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  text-align: center;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  font-family: "Roboto", sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Shrikhand", cursive;
-}
+@import "./pages/accueil";
 
 main {
   display: flex;
@@ -79,7 +58,6 @@ main {
   padding: 1em;
   border-radius: 50%;
   color: white;
-  z-index: 4;
 }
 .fonctionnement__btn-placement {
   position: absolute;
@@ -91,7 +69,7 @@ main {
 .Fonctionnement__btn p {
   display: flex;
   flex-direction: row;
-  z-index: 3;
+
   position: relative;
   width: 90%;
   margin: auto;
