--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,22 +176,27 @@ main {
   align-content: stretch;
 }
 
+.restaurants__card__image img {
+  position: relative;
+  z-index: 15;
+}
+
 .restaurants__card img {
-  height: 60%;
+  position: absolute;
+  height: 55%;
   width: 95%;
   margin-top: 1em;
   margin-bottom: 0em;
+  padding: 0;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
   border: solid black 1px;
-  position: relative;
-  z-index: 1;
 }
 
 .restaurants__bas {
   flex-direction: row;
   margin-top: 0em;
-  height: 30%;
+  height: 25%;
   width: 95%;
   border: solid purple 2px;
   margin: auto;
@@ -199,7 +204,7 @@ main {
 
 .restaurants__bas__gauche {
   border: solid blue 1px;
-  width: 60%;
+  width: 50%;
 }
 
 .restaurants__bas__coeur {
@@ -211,9 +216,22 @@ main {
   position: absolute;
   top: 1em;
   right: 1em;
-  background-color: green;
-  color: blue;
+  background-color: #99e2e0;
+  color: #32b0ad;
   width: 5em;
+  font-weight: bold;
+  border-radius: 10%;
+}
+
+.fa-list-ul,
+.fa-mobile-alt {
+  font-size: 2em;
+  color: #686868;
+}
+
+.fa-store {
+  color: #9356dc;
+  font-size: 2em;
 }
 
 /*# sourceMappingURL=style.css.map */
