mise en place card restaurant

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,22 +165,13 @@ main {
 }
 
 .restaurants__card {
-  display: flex;
-  flex-direction: column;
-  border: solid red 3px;
-  width: 95%;
-  height: 400px;
-  margin: auto;
-  border-radius: 1em;
-  margin-bottom: 1em;
-  align-content: stretch;
+  position: relative;
+  height: 430px;
 }
 
 .restaurants__card__image img {
   position: absolute;
-  z-index: 15;
-  top: 0;
-  left: 0;
+  z-index: 1;
 }
 
 .restaurants__card img {
@@ -195,7 +186,28 @@ main {
   border: solid black 1px;
 }
 
+.restaurants__card__nouveau {
+  position: absolute;
+  top: 2px;
+  right: 20px;
+  width: 5em;
+  height: 2em;
+  z-index: 2;
+  font-size: 200%;
+}
+
+.restaurants__card__nouveau__texte {
+  font-size: 1em;
+  width: 10;
+  height: 10;
+  background-color: #99e2e0;
+  color: #278886;
+  font-weight: bold;
+  border-radius: 4%;
+}
+
 .restaurants__bas {
+  display: flex;
   flex-direction: row;
   margin-top: 0em;
   height: 25%;
@@ -206,23 +218,12 @@ main {
 
 .restaurants__bas__gauche {
   border: solid blue 1px;
-  width: 50%;
+  width: 79%;
 }
 
 .restaurants__bas__coeur {
   border: solid yellowgreen 1px;
-  width: 20%;
-}
-
-.nouveau {
-  position: absolute;
-  top: 1em;
-  right: 1em;
-  background-color: #99e2e0;
-  color: #32b0ad;
-  width: 5em;
-  font-weight: bold;
-  border-radius: 10%;
+  width: 19%;
 }
 
 .fa-list-ul,
