--- a/sass/main.scss
+++ b/sass/main.scss
@@ -88,6 +88,13 @@ main {
   position: absolute;
   z-index: 1;
 }
+
+.restaurants__card__image2 img {
+  position: absolute;
+  z-index: 1;
+  max-height: 250px;
+}
+
 .restaurants__card img {
   position: relative;
   height: 55%;
