--- a/sass/main.scss
+++ b/sass/main.scss
@@ -169,7 +169,8 @@ main {
   top: 8em;
   border-radius: 2em 2em 0 0;
 
-  margin-top: -1.3em;
+  margin-top: -1.8em;
+  padding-top: 1em;
   background-color: white;
 
   width: 100%;
