rajout des appelle police dans le menu la palette du gout

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -187,7 +187,6 @@ main {
   top: 1.5em;
   left: 0.5em;
   font-size: 1.5em;
-  margin-left: 1em;
   border: solid red 2px;
 }
 
@@ -197,4 +196,5 @@ main {
   border: yellowgreen 2px solid;
   justify-content: center;
   align-items: center;
+  padding: 0.1em;
 }
