--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@ body {
 
 .roboto--font {
   font-family: "Shrikhand", cursive;
+  font-weight: bold;
 }
 
 .header__bas {
@@ -275,7 +276,6 @@ main {
   top: 1.5em;
   left: 0.5em;
   font-size: 1.5em;
-  margin-left: 1em;
   border: solid red 2px;
 }
 
@@ -285,6 +285,7 @@ main {
   border: yellowgreen 2px solid;
   justify-content: center;
   align-items: center;
+  padding: 0.1em;
 }
 
 /*# sourceMappingURL=style.css.map */
