--- a/sass/main.scss
+++ b/sass/main.scss
@@ -192,3 +192,18 @@ main {
   align-items: center;
   padding: 0.1em;
 }
+
+.carrevert {
+  height: 0.3em;
+  width: 3.5em;
+  background-color: $colour-tertiaire;
+}
+
+.plat__card {
+  border-radius: 20px;
+  text-align: center;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 20px;
+  box-shadow: 3px 3px 3px $colour-bordure1;
+}
