--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
 }
@@ -121,10 +122,13 @@ main {
 
 .Fonctionnement__btn-color {
   background: #f7f7f7;
+  margin: auto;
+  margin-bottom: 1em;
 }
 
 .Fonctionnement__btn-color2 {
   background: #f2eafb;
+  margin: auto;
 }
 
 .Fonctionnement__btn_chiffre {
@@ -238,7 +242,9 @@ main {
   z-index: 1;
   max-height: 250px;
   width: 100%;
-  margin: 0.2em 0;
+  margin: 0 0;
+  padding: 0 0;
+  background-color: #d5d5d5;
 }
 
 .header__titre {
@@ -247,7 +253,7 @@ main {
   border-radius: 2em 2em 0 0;
   margin-top: -1.8em;
   padding-top: 1em;
-  background-color: white;
+  background-color: #d5d5d5;
   width: 100%;
 }
 
@@ -279,15 +285,46 @@ main {
   height: 0.3em;
   width: 3.5em;
   background-color: #99e2e0;
+  margin-left: 1.8em;
+  margin-bottom: 0.5em;
 }
 
 .plat__card {
   border-radius: 20px;
-  text-align: center;
+  text-align: left;
+  padding-left: 0.5em;
   width: 90%;
   margin: auto;
   margin-bottom: 20px;
-  box-shadow: 3px 3px 3px #d5d5d5;
+  box-shadow: 3px 3px 3px #353535;
+  background-color: white;
+}
+
+.main__menu {
+  background-color: #d5d5d5;
+  margin-top: -1.4em;
+}
+
+.espace__gauche_titre_H2 {
+  margin-left: 1.3em;
+}
+
+.main__menu__argent {
+  right: 1em;
+  font-weight: bold;
+  padding-right: 1.8em;
+}
+
+.overflow-ellipsis {
+  text-overflow: ellipsis;
+}
+
+.point {
+  border: 1px solid;
+  padding: 2px 5px;
+  /* Nécessaires pour text-overflow */
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
