--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,7 +162,11 @@ main {
 
 .restaurants__card {
   position: relative;
-  height: 430px;
+  background-color: white;
+  margin: auto;
+  border-radius: 20px 20px 20px 20px;
+  width: 90%;
+  height: 80%;
 }
 
 .restaurants__card__image img {
@@ -175,14 +179,18 @@ main {
   position: absolute;
   z-index: 1;
   max-height: 250px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .restaurants__card img {
   position: relative;
   height: 55%;
-  width: 95%;
+  width: 100%;
   margin-top: 0em;
   margin-bottom: 0em;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
@@ -192,7 +200,7 @@ main {
   position: absolute;
   top: 2px;
   right: 18px;
-  width: 4em;
+  width: 3em;
   height: 2em;
   z-index: 2;
   font-size: 200%;
