--- a/sass/main.scss
+++ b/sass/main.scss
@@ -88,7 +88,9 @@ main {
   margin: auto;
   border-radius: 20px 20px 20px 20px;
   width: 90%;
-  height: 80%;
+  height: 90%;
+  margin-bottom: 2em;
+
   
  
 }
