--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,3 +5,5 @@ $colour-bordure1: #d5d5d5;
 $colour-nuancefonce: #eaeaea;
 $colour-nuanceclair: #f6f6f6;
 $colour-footer: #353535;
+$colour-plat__card:#F6F6F6; 
+$colour-plat__card--fond:#ffffff; 
