--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,7 +267,7 @@ main {
   border-radius: 2em 2em 0 0;
   margin-top: -1.8em;
   padding-top: 1em;
-  background-color: #d5d5d5;
+  background-color: #F6F6F6;
   width: 100%;
 }
 
@@ -311,12 +311,12 @@ main {
   margin: auto;
   margin-bottom: 20px;
   box-shadow: 3px 3px 3px #353535;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .main__menu {
-  background-color: #d5d5d5;
   margin-top: -1.4em;
+  background-color: #F6F6F6;
 }
 
 .espace__gauche_titre_H2 {
