--- a/sass/main.scss
+++ b/sass/main.scss
@@ -250,11 +250,15 @@ main {
 .overflow-ellipsis {
   text-overflow: ellipsis;
 }
-.point {
+p {
  
   border: 1px solid;
   padding: 2px 5px;
  /* Nécessaires pour text-overflow */
   white-space: nowrap;
   overflow: hidden;
+}
+.plat__card__p{
+  display:flex;
+  direction: row;
 }
