--- a/public/css/style.css
+++ b/public/css/style.css
@@ -333,17 +333,26 @@ main {
   text-overflow: ellipsis;
 }
 
-p {
-  border: 1px solid;
+.plat__card__p {
+  display: flex;
+  direction: row;
+  overflow: hidden;
+}
+
+.plat__card__p p {
   padding: 2px 5px;
   /* Nécessaires pour text-overflow */
   white-space: nowrap;
   overflow: hidden;
 }
 
-.plat__card__p {
-  display: flex;
-  direction: row;
+.point {
+  flex: 90;
+  overflow: hidden;
+}
+
+.main__menu__argent {
+  flex: 1;
 }
 
 /*# sourceMappingURL=style.css.map */
