deplacement du shadow du logo

--- a/sass/main.css
+++ b/sass/main.css
@@ -16,6 +16,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   font-family: "Roboto", sans-serif;
+  padding:0;
 }
 
 .roboto--font {
