--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,10 +24,8 @@ body {
 }
 
 .header__milieu {
-  box-shadow: 0px -4px 3px #d5d5d5;
   display: flex;
   flex-direction: column;
-  background-color: #eaeaea;
   text-align: center;
 }
 
@@ -51,8 +49,14 @@ body {
 }
 
 .logo {
-  margin-top: 1em;
+  padding-top: 1em;
   margin: auto;
+  box-shadow: 0px 4px 3px #d5d5d5;
+  background-color: #eaeaea;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0.5em;
+  padding-top: 0.5;
 }
 
 .fa-map-marker-alt {
