--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,10 +6,9 @@
 }
 
 .header__milieu {
-  box-shadow: 0px -4px 3px $colour-bordure1;
+  
   display: flex;
   flex-direction: column;
-  background-color: $colour-nuancefonce;
   text-align: center;
 }
 
@@ -31,8 +30,14 @@
   font-size: 1.4em;
 }
 .logo {
-  margin-top: 1em;
+  padding-top: 1em;
   margin: auto;
+  box-shadow: 0px 4px 3px $colour-bordure1;
+  background-color: $colour-nuancefonce;
+  margin-top: 0;
+  margin-bottom:0;
+  padding-bottom: 0.5em;
+  padding-top: 0.5;
 }
 
 .fa-map-marker-alt {
