--- a/sass/main.scss
+++ b/sass/main.scss
@@ -278,3 +278,11 @@ main {
 .main__menu__argent{
 flex:1;
 }
+
+.fonctionnement h1{
+  margin-left: 1em;
+ 
+ }
+ .restaurants h1{
+   margin-left:1em;
+ }
