--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -10,6 +10,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  background-color: $colour-nuancefonce;
+  box-shadow: 10em 10em 1em blue;
 }
 
 .header__bas__btn {
@@ -25,21 +27,20 @@
 .header__milieu p {
   font-weight: bold;
   font-size: 1.4em;
+  color:$colour-bordure1;
 }
 .header__bas p {
   font-size: 1.4em;
 }
 .logo {
-  padding-top: 1em;
-  margin: auto;
-  box-shadow: 0px 4px 3px $colour-bordure1;
-  background-color: $colour-nuancefonce;
-  margin-top: 0;
-  margin-bottom:0;
-  padding-bottom: 0.5em;
-  padding-top: 0.5;
+  padding-top: 0.5em;
+
+  padding-bottom: 0.5;
+  box-shadow: 1em 1em 1em blue;
+ 
 }
 
 .fa-map-marker-alt {
   font-size: 1em; /*taille icone de recherche*/
 }
+
