reglage de box-shadow de header__milieu

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -12,7 +12,8 @@
   text-align: center;
   background-color: $colour-nuancefonce;
   padding:0.01em;
-  border:solid red $colour-nuancefonce;
+  box-shadow: -2px -6px 4px $colour-bordure1;
+ 
  
 }
 
