--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ body {
   text-align: center;
   background-color: #eaeaea;
   padding: 0.01em;
-  border: solid red #eaeaea;
+  box-shadow: -2px -6px 4px #d5d5d5;
 }
 
 .header__bas__btn {
