--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,7 @@ body {
 
 .logo {
   padding-top: 0.5em;
-  padding-bottom: 0.5;
+  padding-bottom: 0.5em;
   box-shadow: 0 0.5em 1em #d5d5d5;
 }
 
