--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -38,7 +38,7 @@
 .logo {
   padding-top: 0.5em;
 
-  padding-bottom: 0.5;
+  padding-bottom: 0.5em;
   box-shadow: 0 0.5em 1em $colour-bordure1;
  
 }
