--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,6 +337,7 @@ main {
   right: 1em;
   font-weight: bold;
   padding-right: 1.8em;
+  flex: 1;
 }
 
 .overflow-ellipsis {
@@ -356,13 +357,20 @@ main {
   overflow: hidden;
 }
 
+.plat__card__p h2 {
+  padding: 2px 5px;
+  /* Nécessaires pour text-overflow */
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .point {
   flex: 90;
   overflow: hidden;
 }
 
-.main__menu__argent {
-  flex: 1;
+.point2 {
+  overflow: hidden;
 }
 
 .fonctionnement h1 {
