--- a/sass/main.scss
+++ b/sass/main.scss
@@ -274,11 +274,11 @@ main {
 
 }
 
-.plat__card__p p {
+ {
   
 
   padding: 2px 5px;
- /* Nécessaires pour text-overflow */
+ /* Nécessaires pour overflow-ellipsis */
   white-space: nowrap;
   overflow: hidden;
   
@@ -287,7 +287,7 @@ main {
   
 
   padding: 2px 5px;
- /* Nécessaires pour text-overflow */
+ /* Nécessaires pour  overflow-ellipsis */
   white-space: nowrap;
   overflow: hidden;
   
