corection des .plat__card__p h2  .plat__card__p p

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,14 +352,14 @@ main {
 
 .plat__card__p p {
   padding: 2px 5px;
-  /* Nécessaires pour text-overflow */
+  /* Nécessaires pour overflow-ellipsis */
   white-space: nowrap;
   overflow: hidden;
 }
 
 .plat__card__p h2 {
   padding: 2px 5px;
-  /* Nécessaires pour text-overflow */
+  /* Nécessaires pour  overflow-ellipsis */
   white-space: nowrap;
   overflow: hidden;
 }
