--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -12,7 +12,8 @@
   text-align: center;
   background-color: $colour-nuancefonce;
   padding:0.01em;
-  box-shadow: -2px -6px 4px $colour-bordure1;
+  height: 100%;
+  
  
  
 }
@@ -35,13 +36,21 @@
 .header__bas p {
   font-size: 1.4em;
 }
-.logo {
-  padding-top: 0.5em;
 
-  padding-bottom: 0.5em;
-  box-shadow: 0 0.5em 1em $colour-bordure1;
- 
-}
+  .logo {
+    display: flex;
+    flex-direction: row;
+  
+    justify-content: center;
+    align-items: center;
+    padding: 0.1em;
+  }
+
+
+
+
+
+
 
 .fa-map-marker-alt {
   font-size: 1em; /*taille icone de recherche*/
