--- a/sass/main.scss
+++ b/sass/main.scss
@@ -78,14 +78,20 @@ main {
 .Fonctionnement__btn p {
   display: flex;
   flex-direction: row;
-  white-space: nowrap;          /*http://patatos.over-blog.com/article-comment-eviter-un-retour-a-la-ligne-en-css-102725385.html*/
+  white-space: nowrap;          /*http://patatos.over-b.com/article-comment-eviter-un-retour-a-la-ligne-en-css-102725385.html*/
   position: relative;
-  
+
   width: 90%;
   margin:auto;
   height: 2em;
   left:0.5em;
   line-height: 2em;/*https://www.journaldunet.fr/web-tech/developpement/1202779-comment-obtenir-un-texte-aligne-verticalement-au-milieu-d-une-div */
+}
+.Fonctionnement__btn__p p{
+  font-weight: bold;
+  font-size: larger;
+  text-align: center;
+  color:black;
 }
 
 .fa-mobile-alt {
@@ -222,6 +228,7 @@ main {
   justify-content: center;
   align-items: center;
   padding: 0.1em;
+  margin:0;
 }
 
 .carrevert {
@@ -309,4 +316,12 @@ main {
  }
  .restaurants h1{
    margin-left:1em;
+ }
+
+ .roboto--font{
+
+margin:0;
+width: 100%;
+height: 100%;
+box-shadow: 0em 0.15em 0.1em $colour-bordure1;
  }
