--- a/public/css/style.css
+++ b/public/css/style.css
@@ -405,6 +405,11 @@ main {
   display: flex;
   flex-direction: column;
   flex: 1;
+  text-align: left;
+  padding: 0;
+  width: 90%;
+  margin: auto;
+  display: flex;
 }
 
 .animation__essai {
@@ -420,16 +425,16 @@ main {
     width: 0px;
   }
   25% {
-    width: 50px;
+    width: 25px;
   }
   50% {
-    width: 150px;
+    width: 50px;
   }
   75% {
-    width: 200px;
+    width: 75px;
   }
   100% {
-    width: 250px;
+    width: 100px;
   }
 }
 
