--- a/sass/main.scss
+++ b/sass/main.scss
@@ -252,7 +252,9 @@ main {
   flex-direction: row;
   align-items: stretch ;
   
+  
 }
+
 .main__menu{
 
  margin-top: -1.4em;
@@ -294,8 +296,7 @@ main {
   
 }
 
-.plat__card__p h2 {
-  
+  .plat__card__p h2{
 
   padding: 2px 5px;
  /* Nécessaires pour  overflow-ellipsis */
@@ -336,18 +337,22 @@ box-shadow: 0em 0.15em 0.1em $colour-bordure1;
 
 
  .colonne{
-   display: flex;
-   flex-direction: column;
-   flex:1
- }
-
+  display: flex;
+  flex-direction: column;
+  flex:1;
+ text-align: left;
+ padding: 0;
+ width: 90%;
+ margin: auto;
+ display:flex;
+}
 
 
 
  .animation__essai {
+  
   margin-left: 50px;
   width: 200px;
- 
   background-color: $colour-tertiaire;
   animation: essai__animation 2s infinite alternate;
   border-radius: 0 20px 20px 0;
@@ -362,23 +367,24 @@ box-shadow: 0em 0.15em 0.1em $colour-bordure1;
   25%  {
    
     
-    width: 50px;
+    width: 25px;
     
   }
   50%  {
     
    
-    width: 150px;
+    width: 50px;
     
   }
   75%  { 
     
   
-    width: 200px;
+    width: 75px;
   }
   100% {  
    
   
-    width: 250px;
+    width: 100px;
   }
 }
+
